--- a/arithmetic_practice/index.html
+++ b/arithmetic_practice/index.html
@@ -234,7 +234,7 @@
     </div>
     <div id="cpm-display">CPM: 0</div>
     <div id="question-area">
-        <input type="number" id="answer" onkeydown="restartOnEnter(event)" oninput="checkAnswer()">
+        <input autocomplete="off" type="number" id="answer" onkeydown="restartOnEnter(event)" oninput="checkAnswer()">
         <div id="question" class="question"></div>
         <div id="upcoming-questions"></div>
     </div>
